Change | to > in templates.
Clint pointed out that | prevents things rendering properly on
arbitrarily wide screens. For most things that makes sense but it
doesn't for the JSON examples IMO so I didn't alter those.

Change-Id: Ifb7dcc265c225b000bd5d26500212d41ea0233c8

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -106,7 +106,7 @@ parameters:
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
   NeutronBridgeMappings:
-    description: |
+    description: >
       The OVS logical->physical bridge mappings to use. See the Neutron
       documentation for details. Defaults to mapping br-ex - the external
       bridge on hosts - to a physical name 'datacentre' which can be used
@@ -117,7 +117,7 @@ parameters:
     default: "datacentre:br-ex"
   NeutronNetworkVLANRanges:
     default: 'datacentre'
-    description: |
+    description: >
       The Neutron ML2 and OpenVSwitch vlan mapping range to support. See the
       Neutron documentation for permitted values. Defaults to permitting any
       VLAN on the 'datacentre' physical network (See NeutronBridgeMappings).
@@ -173,12 +173,12 @@ parameters:
   NeutronFlatNetworks:
     type: string
     default: 'datacentre'
-    description: |
+    description: >
       If set, flat networks to configure in neutron plugins. Defaults to
       'datacentre' to permit external network creation.
   HypervisorNeutronPhysicalBridge:
     default: 'br-ex'
-    description: |
+    description: >
       An OVS bridge to create on each hypervisor. This defaults to br-ex the
       same as the control plane nodes, as we have a uniform configuration of
       the openvswitch agent. Typically should not need to be changed.
@@ -201,7 +201,7 @@ parameters:
     type: string
   NeutronPublicInterfaceTag:
     default: ''
-    description: |
+    description: >
       VLAN tag for creating a public VLAN. The tag will be used to
       create an access port on the exterior bridge for each control plane node,
       and that port will be given the IP address returned by neutron from the
@@ -283,7 +283,7 @@ parameters:
     type: json
   PublicVirtualFixedIPs:
     default: []
-    description: |
+    description: >
         Control the IP allocation for the PublicVirtualInterface port. E.g.
         [{'ip_address':'1.2.3.4'}]
     type: json
