--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -134,7 +134,7 @@ parameters:
     type: string
   NeutronPublicInterfaceIP:
     default: ''
-    description: |
+    description: >
       A custom IP address to put onto the NeutronPublicInterface bridge.
       See also NeutronPublicInterfaceTagIP for adding a VLAN tagging IP.
       NeutronPublicInterfaceIP is deprecated in the context of deploying
@@ -142,7 +142,7 @@ parameters:
     type: string
   NeutronPublicInterfaceTag:
     default: ''
-    description: |
+    description: >
       VLAN tag for creating a public VLAN. The tag will be used to
       create an access port on the exterior bridge, and that port will be
       given the IP address returned by neutron from the public network.
