Fix spelling of controller0_VLANPort
Prior to this change, using these templates fails as
controller0_VLANPort is defined, but we attempt to use
controller0VLANPort instead.

Change-Id: Ieb2eece4e7d48177acae0bef916192d8e6a4a4a3

--- a/overcloud-vlan-port.yaml
+++ b/overcloud-vlan-port.yaml
@@ -1,7 +1,7 @@
 outputs:
   controller0PublicIP:
     description: Address for registering endpoints in the cloud.
-    value: {get_attr: [controller0VLANPort, fixed_ips, 0, ip_address]}
+    value: {get_attr: [controller0_VLANPort, fixed_ips, 0, ip_address]}
 resources:
   # Override the main template which can also supply a static route.
   controller0_99_VLANPort:
