Undercloud params for compute driver and manager
Add undercloud template parameters for NovaComputeDriver,
NovaComputeManager, and NovaSchedulerHostManager.

The motivation here is to be able to test configure Nova to use
the new (in-tree) Ironic compute driver (which used to live
in Ironic).

NOTE: The initial Nova in-tree Ironic driver won't have its
own ClusteredComputeManager (compute_manager). Even so I've
gone ahead and added a parameter for NovaComputeManager
so we can modify this accordingly in the future without
making hard coded template changes.

Change-Id: Ib48a6b6d8a6cff157bdf3948bd0330e9b29dd46a

--- a/undercloud-bm-nova-deploy.yaml
+++ b/undercloud-bm-nova-deploy.yaml
@@ -3,6 +3,18 @@ parameters:
     default: eth2
     description: What interface to bridge onto br-ex for network nodes.
     type: string
+  NovaComputeDriver:
+    default: baremetal.driver.BareMetalDriver
+    description: Full class name for the Nova compute driver
+    type: string
+  NovaComputeManager:
+    default: nova.compute.manager.ComputeManager
+    description: Full class name for the Nova compute manager
+    type: string
+  NovaSchedulerHostManager:
+    default: nova.scheduler.host_manager.HostManager
+    description: Full class name for the Nova scheduler host manager
+    type: string
   PowerManager:
     default: nova.virt.baremetal.ipmi.IPMI
     description: Bare metal power manager driver.
