--- a/undercloud-vm-ironic-config.yaml
+++ b/undercloud-vm-ironic-config.yaml
@@ -5,8 +5,9 @@ resources:
       config:
         nova:
           compute_hostname: undercloud
-          compute_driver: ironic.nova.virt.ironic.driver.IronicDriver
-          compute_manager: ironic.nova.compute.manager.ClusteredComputeManager
+          compute_driver: {get_param: NovaComputeDriver}
+          compute_manager: {get_param: NovaComputeManager}
+          scheduler_host_manager: {get_param: NovaSchedulerHostManager}
           db: mysql://nova:unset@localhost/nova
           debug: {get_param: Debug}
           default_ephemeral_format: ext4
