--- a/undercloud-vm-nova-config.yaml
+++ b/undercloud-vm-nova-config.yaml
@@ -5,7 +5,9 @@ resources:
       config:
         nova:
           compute_hostname: undercloud
-          compute_driver: baremetal.driver.BareMetalDriver
+          compute_driver: {get_param: NovaComputeDriver}
+          compute_manager: {get_param: NovaComputeManager}
+          scheduler_host_manager: {get_param: NovaSchedulerHostManager}
           db: mysql://nova:unset@localhost/nova
           default_ephemeral_format: ext4
           host: 127.0.0.1
