Update overcloud examples for ExtraConfig
The existing examples for the overcloud ExtraConfig options
use an ironic setting that would likely never apply (Ironic
isn't for the overcloud).

This patch modifies the default section setting to use
the Nova force_config_drive option instead as a
config example.

Change-Id: Ieb893552fe9466b90b9d9a831a676d114efb6db1

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -27,8 +27,8 @@ parameters:
           {"config":
             [{"section": "default",
               "values":
-                [{"option": "compute_manager",
-                  "value": "ironic.nova.compute.manager.ClusterComputeManager"
+                [{"option": "force_config_drive",
+                  "value": "always"
                  }
                 ]
              },
