Add SwiftMinPartHours parameter
This parameter adds the facility for an operator to set the length
of time in hours that a partition in a swift ring can be altered
following a rebalance of that ring. The default value is set to one.

The corresponding element change is here:
Ie6438386a54794e1ae2f31ad925db01c2c10ed6d

Change-Id: Icc5e431a7e2884b3ca3a255b6fd901619bc98460

--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -14,6 +14,10 @@ parameters:
     type: number
     default: 1
     description: How many replicas to use in the swift rings.
+  SwiftMinPartHours:
+    type: number
+    default: 1
+    description: The minimum time (in hours) before a partition in a ring can be moved following a rebalance.
 resources:
   controller0Swift:
     type: OS::Heat::StructuredDeployment
@@ -52,3 +56,4 @@ resources:
                         - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
         swift_replicas: { get_param: SwiftReplicas}
+        swift_min_part_hours: { get_param: SwiftMinPartHours}
