--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -71,3 +71,4 @@ resources:
                         - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
         swift_replicas: { get_param: SwiftReplicas}
+        swift_min_part_hours: { get_param: SwiftMinPartHours}
