--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -10,4 +10,5 @@ resources:
           part-power: 10
           proxy-memcache: { get_input: swift_proxy_memcache }
           replicas: {get_input: swift_replicas }
+          min-part-hours: {get_input: swift_min_part_hours }
           service-password: { get_input: swift_password }
