Refactor Heat dependencies for nova compute
Allows heat to have more control of the parallelism of the deploy
and allow easy integration of the new heat dependencies required for
nova compute integration. At present is difficult understand and has
unnecessary complex dependencies.

Change-Id: Ie566b8b14cbd98fe29cc2368a96d45cc74ca4715
Co-Authored-By: Nicholas Randon <nicholas.randon@hp.com>

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -209,7 +209,6 @@ resources:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
   NovaCompute0Deployment:
-    depends_on: [controller0AllNodesDeployment]
     type: OS::Heat::StructuredDeployment
     properties:
       signal_transport: NO_SIGNAL
@@ -256,14 +255,16 @@ resources:
         live_update_image_id: {get_param: LiveUpdateComputeImage}
         ntp_server: {get_param: NtpServer}
   NovaCompute0AllNodesDeployment:
-    depends_on: [NovaCompute0Passthrough]
+    depends_on:
+      - controller0AllNodesDeployment
+      - NovaCompute0Deployment
+      - NovaCompute0PassthroughSpecific
     type: OS::Heat::StructuredDeployment
     properties:
       signal_transport: {get_param: DefaultSignalTransport}
       config: {get_param: AllNodesConfig}
       server: {get_resource: NovaCompute0}
   NovaCompute0Passthrough:
-    depends_on: [NovaCompute0Deployment]
     type: OS::Heat::StructuredDeployment
     properties:
       config: {get_resource: NovaComputePassthrough}
