undercloud: use Nova compute Ironic driver
Updates the NovaComputeDriver and NovaSchedulerHostManager
defaults so that we use the Nova in-tree versions of
the Ironic compute and scheduler host managers.

The old Ironic in-tree drivers are now deprecated.

Change-Id: I91667a3e7861591285c931006c448cc304649349

--- a/undercloud-vm-ironic-deploy.yaml
+++ b/undercloud-vm-ironic-deploy.yaml
@@ -8,7 +8,7 @@ parameters:
     description: What interface to bridge onto br-ex for network nodes.
     type: string
   NovaComputeDriver:
-    default: ironic.nova.virt.ironic.driver.IronicDriver
+    default: nova.virt.ironic.driver.IronicDriver
     description: Full class name for the Nova compute driver
     type: string
   NovaComputeManager:
@@ -16,7 +16,7 @@ parameters:
     description: Full class name for the Nova compute manager
     type: string
   NovaSchedulerHostManager:
-    default: ironic.nova.scheduler.ironic_host_manager.IronicHostManager
+    default: nova.scheduler.ironic_host_manager.IronicHostManager
     description: Full class name for the Nova scheduler host manager
     type: string
   PowerSSHPrivateKey:
