Configures haproxy to serve novnc_proxy
This patch configures haproxy to serve novnc_proxy which currently
listens on 0.0.0.0. So before this patch goes in novnc needs to be
listening on local-ipv4 like the rest of the services. The following
patch does that in image-elements.

https://review.openstack.org/#/c/125326/

Change-Id: I0c6a3d6a8fd10da71abbf568633b28bdb5e56aa2

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -743,6 +743,9 @@ resources:
             - name: nova_metadata
               port: 8775
               net_binds: *public_binds
+            - name: nova_novncproxy
+              port: 6080
+              net_binds: *public_binds
             - name: ceilometer
               port: 8777
               net_binds: *public_binds
