Secure the MySQL bind-address on the undercloud
The MySQL bind-address on the undercloud should be set to
localhost for security.

Change-Id: I0ea485fa6673c06087f5c5baedf591fba54288a4

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -294,6 +294,7 @@ resources:
         mysql:
           innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
           root-password: {get_resource: MysqlRootPassword}
+          bind_address: 127.0.0.1
         neutron:
           debug: {get_param: Debug}
           host: 127.0.0.1
