Enable Neutron DVR support in TripleO installation
This change adds the necessary elements to the overcloud-source.yaml,
nova-compute-config.yaml and nova-compute-instance.yaml to allow Neutron
Distributed Virtual Routers (DVR) to be enabled.  The added elements are
set to default to values such that DVR is not enabled in keeping with
backwards compatibility.

Change-Id: I422c65e7d941593083d52ad7fdf0dfd1d2fb3155
blueprint: support-neutron-dvr

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -34,7 +34,12 @@ resources:
           debug: {get_param: Debug}
           flat-networks: {get_input: neutron_flat_networks}
           host: {get_input: neutron_host}
+          router_distributed: {get_input: neutron_router_distributed}
+          agent_mode: {get_input: neutron_agent_mode}
           ovs_db: {get_input: neutron_dsn}
+          metadata_proxy_shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
+          mechanism_drivers: {get_input: neutron_mechanism_drivers}
+          allow_automatic_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
           ovs:
             local_ip: {get_input: neutron_local_ip}
             tenant_network_type: {get_input: neutron_tenant_network_type}
@@ -44,6 +49,7 @@ resources:
             enable_tunneling: {get_input: neutron_enable_tunneling}
             physical_bridge: {get_input: neutron_physical_bridge}
             public_interface: {get_input: neutron_public_interface}
+            public_interface_raw_device: {get_input: neutron_public_interface_raw_device}
           service-password: {get_input: neutron_password}
         admin-password: {get_input: admin_password}
         rabbit:
