--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -170,6 +170,9 @@ parameters:
     description: The password for the nova service account, used by nova-api.
     type: string
     hidden: true
+  NeutronDVR:
+    default: 'False'
+    type: string
   NtpServer:
     type: string
     default: ''
