Add block completion signal
In I973d197245ed32612bde9209479e6ae3a443fc69, the signal_transport was
set to NO_SIGNAL to prevent the resource staying CREATE_IN_PROGRESS
forever. This means that Heat reports the stack is configured before it
actually is.

The correct fix was to add completion-signal to BlockStorageConfig.
However now there's a BlockStorage0AllNodesDeployment, we simply have to
receive the signal from allNodesConfig by setting the deployment
signal-transport.

Change-Id: I1f6408ca39fddd146e7aae140f61d265bbf563ec

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -27,6 +27,7 @@ resources:
     depends_on: [BlockStorage0Deployment,BlockStorage0PassthroughSpecific]
     type: OS::Heat::StructuredDeployment
     properties:
+      signal_transport: {get_param: DefaultSignalTransport}
       config: {get_resource: allNodesConfig}
       server: {get_resource: BlockStorage0}
   BlockStorage0Deployment:
