--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -1,5 +1,7 @@
 resource_registry:
   OS::TripleO::BlockStorage: cinder-storage.yaml
   OS::TripleO::Compute: compute.yaml
+  OS::TripleO::Compute::SoftwareConfig: compute-config.yaml
+  OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: controller.yaml
   OS::TripleO::ObjectStorage: swift-storage.yaml
