Simplify the layout of haproxy net binds config
Make the net binds simpler to maintain.

Change-Id: I7c7f2cde38a88976afe33097cdfe4a93d62a6417

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -694,42 +694,33 @@ resources:
                 ip: {get_attr: [controller0, networks, ctlplane, 0]}
                 name: {get_attr: [controller0, name]}
           net_binds:
-            - ip: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
+            - &control_vip {ip: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}}
+            - &public_vip {ip: {get_attr: [PublicVirtualIP, fixed_ips, 0, ip_address]}}
           services:
             - name: keystone_admin
               port: 35357
-              net_binds: &public_binds
-                - ip: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
-                - ip: {get_attr: [PublicVirtualIP, fixed_ips, 0, ip_address]}
             - name: keystone_public
               port: 5000
-              net_binds: *public_binds
             - name: horizon
               port: 80
-              net_binds: *public_binds
             - name: neutron
               port: 9696
-              net_binds: *public_binds
             - name: cinder
               port: 8776
-              net_binds: *public_binds
             - name: glance_api
               port: 9292
-              net_binds: *public_binds
             - name: glance_registry
               port: 9191
-              net_binds: *public_binds
             - name: heat_api
               port: 8004
-              net_binds: *public_binds
             - name: heat_cloudwatch
               port: 8003
-              net_binds: *public_binds
             - name: heat_cfn
               port: 8000
-              net_binds: *public_binds
             - name: mysql
               port: 3306
+              net_binds:
+                - *control_vip
               extra_server_params:
                 - backup
               options:
@@ -739,21 +730,18 @@ resources:
               port: 8773
             - name: nova_osapi
               port: 8774
-              net_binds: *public_binds
             - name: nova_metadata
               port: 8775
-              net_binds: *public_binds
             - name: nova_novncproxy
               port: 6080
-              net_binds: *public_binds
             - name: ceilometer
               port: 8777
-              net_binds: *public_binds
             - name: swift_proxy_server
               port: 8080
-              net_binds: *public_binds
             - name: rabbitmq
               port: 5672
+              net_binds:
+                - *control_vip
               options:
                 - timeout client 0
                 - timeout server 0
