--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -42,6 +42,7 @@ resources:
       signal_transport: NO_SIGNAL
       input_values:
         swift_hash_suffix: {get_param: SwiftHashSuffix}
+        swift_mount_check: {get_param: SwiftMountCheck}
         swift_password: {get_param: SwiftPassword}
         swift_part_power: {get_param: SwiftPartPower}
         swift_devices:
