--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -59,6 +59,10 @@ parameters:
     default: default
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
+  MountCheck:
+    default: 'false'
+    description: Value of mount_check in Swift account/container/object -server.conf
+    type: boolean
   NeutronEnableTunnelling:
     default: "True"
     type: string
@@ -143,6 +147,7 @@ resources:
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
         swift_hash_suffix: {get_param: HashSuffix}
+        swift_mount_check: {get_param: MountCheck}
         swift_password: {get_param: Password}
         swift_part_power: {get_param: PartPower}
         swift_replicas: { get_param: Replicas}
