--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -7,6 +7,7 @@ resources:
         swift:
           devices: { get_input: swift_devices }
           hash: { get_input: swift_hash_suffix }
+          mount-check: { get_input: swift_mount_check }
           part-power: { get_input: swift_part_power }
           proxy-memcache: { get_input: swift_proxy_memcache }
           replicas: {get_input: swift_replicas }
