--- a/compute.yaml
+++ b/compute.yaml
@@ -257,6 +257,9 @@ resources:
 
   NovaComputeConfig:
     type: OS::TripleO::Compute::SoftwareConfig
+    properties:
+      # allow configs to create sub-resources attached to the server
+      server_id: {get_resource: NovaCompute}
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
