--- a/controller.yaml
+++ b/controller.yaml
@@ -97,6 +97,8 @@ parameters:
     default: baremetal
     description: Flavor for control nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   GlanceNotifierStrategy:
     description: Strategy to use for Glance notification queue
     type: string
@@ -131,6 +133,8 @@ parameters:
   Image:
     type: string
     default: overcloud-control
+    constraints:
+      - custom_constraint: glance.image
   ImageUpdatePolicy:
     default: 'REBUILD_PRESERVE_EPHEMERAL'
     description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
@@ -139,6 +143,8 @@ parameters:
     default: default
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
+    constraints:
+      - custom_constraint: nova.keypair
   KeystoneCACertificate:
     default: ''
     description: Keystone self-signed certificate authority certificate.
