--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -58,6 +58,8 @@ parameters:
   controllerImage:
     type: string
     default: overcloud-control
+    constraints:
+      - custom_constraint: glance.image
   ControlVirtualInterface:
     default: 'br-ex'
     description: Interface where virtual ip will be assigned.
@@ -160,6 +162,8 @@ parameters:
     default: default
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
+    constraints:
+      - custom_constraint: nova.keypair
   KeystoneCACertificate:
     default: ''
     description: Keystone self-signed certificate authority certificate.
@@ -288,6 +292,8 @@ parameters:
   NovaImage:
     type: string
     default: overcloud-compute
+    constraints:
+      - custom_constraint: glance.image
   NovaPassword:
     default: unset
     description: The password for the nova service account, used by nova-api.
@@ -300,10 +306,14 @@ parameters:
     default: baremetal
     description: Flavor for compute nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   OvercloudControlFlavor:
     default: baremetal
     description: Flavor for control nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   PublicVirtualFixedIPs:
     default: []
     description: >
